# server/src/models/patient.model.ts
@@ -2,7 +2,9 @@
 import * as mongoose from 'mongoose';
 const patientSchema = new mongoose.Schema({
   name: { type: String, required: true},
+  tierart: {type: String, required: true},
   rasse: String,
+  diagnose: String,
   eigentuemer_vorname: String,
   eigentuemer_nachname: {type: String, required: true}
 });
