# src/app/patient/model/patient.ts
@@ -1,7 +1,9 @@
 export class Patient {
   _id: string;
   name: string;
+  tierart: string;
   rasse: string;
+  diagnose: string;
   eigentuemerVorname: string;
   eigentuemerNachname: string;
 }
